--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -1,3 +1,4 @@
+/*------------------------------------FONTS------------------------------------*/
 @font-face {
 	font-family: "LatoLight";
 	src: url("../assets/fonts/LatoLatinLight/LatoLatinLight.eot");
@@ -16,13 +17,19 @@
 	font-style: normal;
 	font-weight: normal;
 }
+/*-----------------------------------------endfonts----------------------------*/
+
+/*----------------------------------------IMPORT Parts------------------------*/
+@import 'parts/header';
+@import 'parts/footer';
+@import 'parts/media';
+/*--------------------------pageStiles--------------------------------*/
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 	outline: none;
 }
-
 html {
   font-size: 62.5%; }
 .wrapper {
@@ -42,150 +49,10 @@ html {
 .hidden {
 	display: none;
 }
-
-/*-----------------------------------FLEX-GRID-----------------------------*/
-.col-1 {
-	flex: 1;
-}
-.col-2 {
-	flex: 2;
-}
-.col-3 {
-	flex: 3;
-}
-.col-4 {
-	flex: 4;
-}
-.col-5 {
-	flex: 5;
-}
-.col-6 {
-	flex: 6;
-}
-.col-7 {
-	flex: 7;
-}
-.col-8 {
-	flex: 8;
-}
-.col-9 {
-	flex: 9;
-}
-.col-10 {
-	flex: 10;
-}
-.col-11 {
-	flex: 11;
-}
-.col-12 {
-	flex: 12;
-}
-/*-------------------------------------------end-----------------------------------------------*/
 .clear {
 	clear: both;
 }
-.header {
-	background: #fff;
-	position: fixed;
-	width: 100%;
-	z-index: 9999;
-	.header__search_area {
-		display: none;
-	}
-	.fixedTop {
-		display: flex;
-		justify-content: space-between;
-		align-items: center;
-//		padding: 2.8rem 0;
-		max-width: 1170px;
-		margin: 0 auto;
-	}
-	.header__logo {
-		margin-right: 34rem;
-		p {
-			padding: .5rem 0;
-			font: 3.6rem/2rem "LatoLight";
-			background: linear-gradient(45deg, #70269f 0%, #5df1f8 100%);
-			-webkit-background-clip: text;
-			-webkit-text-fill-color: transparent;
-			color: #0B2349;
-  			display: block;
-		}
-	}
-	.header__menu {
-		display: flex;
-		justify-content: flex-start;
-//		position: relative;
-		li {
-			margin-right: 4.2rem;
-			position: relative;
-			&:last-child {
-				margin-right: 0;
-			}
-			a {
-				padding: 3.8rem 0;
-				position: relative;
-				display: flex;
-				justify-content: flex-start;
-				p {
-				display: inline;
-				float: left;
-				margin-right: 5px;
-				font: 1.8rem/2rem "LatoLight";
-				color: #34383d;
-				&:hover {
-					color: #41bedd;
-				}
-				
-				}
-				.chevron {
-					margin-top: 9px;
-				}
-				
-			}
-			&:hover {
-				border-bottom: 2px solid #3fb8d6;
-			}
-			&:hover .subMenu {
-				display: block;
-			}
-			&:last-child {
-				margin-right: 3rem;
-			}
-		}
-		.subMenu {
-			display: none;
-			position: absolute;
-			top: 9.8rem;
-			left: -20px;
-			background-color: #fff;
-			width: 220px;
-			li {
-				border-top: 1px solid grey;
-				width: 100%;
-				a {
-					padding: 0;
-				}
-				p {
-					font: 1.6rem/4.3rem "LatoLight";
-					color: #34383d;
-					padding-left: 2rem;
-				}
-				.chevron {
-					i {
-						transform: rotate(-90deg);
-						margin-top: 1.1rem;
-					}
-				}
-			}
-		}
-	}
-	.header__search {
-		button:hover {
-			cursor: pointer;
-		}
-	}
-}
+/*--------------------------end PageStiles--------------------------------*/
 .banner {
 	position: relative;
 	top: 98px;
@@ -197,7 +64,6 @@ html {
 	background:    -moz-linear-gradient(#7b28b1, #35eef6);
 	background:         linear-gradient(to right, #7b28b1, #35eef6);
 	margin-bottom: 17rem;
-//	padding-top: 7rem;
 	h1 {
 		font: 6rem/6rem  "LatoLight";
 		color: #fff;
@@ -206,7 +72,6 @@ html {
 	}
 	.banner__breadCrumbs {
 		width: 100%;
-		position: relative;
 			.banner__crumbs {
 			justify-content: center;
 			display: flex;
@@ -277,212 +142,6 @@ html {
 		&:hover {
 			background-color: #41bedd;
 			color: #fff;
-		}
-	}
-}
-.footer {
-	position: relative;
-	border-top: 1px solid #cbd0d4;
-	background-color: #ecf0f1;
-	.up {
-		position: absolute;
-		right: 2%;
-		top: -42px;
-	}
-	.arr {
-//		position: relative;
-//		bottom: 0;
-		width: 100%;
-		border-top: 1px solid #cbd0d4;
-		background-color: #e3e7e9;
-		p {
-			text-align: center;
-			color: #899096;
-			padding: 3rem 0;
-		}
-	}
-	.footerWrap{
-		display: flex;
-		flex-flow: wrap;
-//		height: 230px;
-		max-width: 1170px;
-		margin: 0 auto;
-		padding-bottom: 2rem;
-		i {
-			float: left;
-		}
-		.aboutUs {
-			width: 40%;
-		}
-		.address {
-			width: 20%;
-			i {
-				margin-top: 5.5rem;
-			}
-			p {
-				margin-left: 3rem;
-				margin-top: 5.5rem;
-				margin-bottom: 1.5rem;
-			}
-			a {
-				width: 190px;
-				padding: 0.5rem 0;
-				text-align: center;
-				font:600 1.4rem/2.4rem "LatoRegular";
-				color: #34383d;
-				
-				border: 1px solid grey;
-				border-radius: 5px;
-				&:hover {
-					border-color: #a255c4;
-					color: #a255c4;
-				}
-			}
-		}
-		.contact {
-			width: 20%;
-			i {
-				margin-bottom: 1rem;
-			}
-			p {
-				margin-left: 3rem;
-			}
-		}
-		.connect {
-			width: 20%;
-			i {
-				margin-right: 1rem;
-				margin-bottom: 1rem;
-				&:hover {
-					cursor: pointer;
-				}
-			}
-		}
-	}
-	h2 {
-		font: 2rem/5.5rem "LatoLight";
-		color: #34383d;
-	}
-	p {
-		font: 1.6rem/2.4rem "LatoLight";
-		color: #606366;
-	}
-}
-@media screen and (max-width: 768px) {
-	.header {
-		.fixedTop {
-			position: relative;
-			max-width: 767px;
-			justify-content: center;
-		}
-		.header__menu {
-			display: none;
-		}
-		.header__logo {
-			margin-right: 20%;
-		}
-		.header__search_area {
-			display: block;
-			position: absolute;
-			height: 30px;
-			right: -55%;
-		}
-	}
-	.masonryContainer {
-		.grid {
-			.grid-item {
-				img {
-					width: 100%;
-				}
-			}
-		}	
-	}
-	.mainContent__list {
-		flex-flow: column;
-	}
-	/*----------------------------------mobileMenu-----------------------------------------*/
-	.header .header__menuButton {
-		margin-bottom: 1rem;
-		padding: .6rem;
-		position: absolute;
-	    left: 1rem;
-	    top: 1rem;
-		border-top: 3px solid #41bedd;
-		border-bottom: 3px solid #41bedd;
-		display: block;
-		height: 20px;
-		width: 30px;
-	}
-	.header .header__menuButton::before {
-		content: '';
-		height: 3px;
-		width: 30px;
-		position: absolute;
-		top: 6px;
-		left: 0;
-		background: #41bedd;
-	}
-	/*------------------------------------------end--------------------------------------------*/
-	
-	.mainContent .mainContent__list li:nth-of-type(1) a {
-		border-radius: 5px; 
-	}
-	.mainContent .mainContent__list li a {
-		border-right: 1px solid grey;
-		border-bottom: 0;
-		border-radius: 5px;
-	}
-	.mainContent .mainContent__list li:nth-of-type(5) a {
-		
-		border-bottom: 1px solid grey;
-		border-radius: 5px;
-	}
-	.footer {
-		.footerWrap {
-			flex-flow: column;
-			.aboutUs {
-				padding-left: 1rem;
-				width: 100%;
-				margin: 0 auto;
-			}
-			.address {
-				padding-left: 1rem;
-				width: 100%;
-				margin: 0 auto;
-			}
-			.contact {
-				padding-left: 1rem;
-				width: 100%;
-				margin: 0 auto;
-			}
-			.connect {
-				padding-left: 1rem;
-				width: 100%;
-				margin: 0 auto;
-			}
-		}
-	}
-	.banner {
-		height: 450px;
-		margin-bottom: 9.8rem;
-		.banner__breadCrumbs {
-			width: 100%;
-			position: relative;
-			.banner__crumbs {
-				justify-content: center;
-				display: flex;
-				flex-flow: wrap;
-				li {
-					margin-right: 1rem;
-					a {
-						font: 1.6rem/2.4rem "LatoRegular";
-						color: #ecf0f1;
-						img {
-							padding-left: 1rem;
-						}
-					}
-				}
-			}
 		}
 	}
 }
